# UCGP

./: .gitignore  CITATION.cff  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
configs/: paper_default.yaml  smoke_test.yaml
docs/: RELEASE_CHECKLIST.md
examples/: run_paper_default.sh  run_smoke.ps1
tools/: export_theta.py  render_theta.py
ucgp/: __init__.py  cli.py  config.py  engine.py
ucgp/backends/: __init__.py  autoclip.py
